# mace

./: .gitignore  Cargo.toml  LICENSE  README.md  main.py
src/: classifier.rs  cli.rs  configuration.rs  main.rs  utils.rs
src/extractor/: mod.rs
src/extractor/coper/: mod.rs  rules.rs
src/extractor/dmsniff/: counter.rs  mod.rs  prefix.rs  primes.rs  rules.rs  tld.rs
src/extractor/metastealer/: mod.rs  rules.rs  yara_rule.rs
