[package]
name = "mace"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
clap = { version = "4.5.28", features = ["derive"] }
exe = "0.5.6"
iced-x86 = "1.21.0"
serde = "1.0.217"
serde_derive = "1.0.217"
serde_json = "1.0.138"
sha256 = "1.5.0"
yara-x = "0.13.0"
zip = "2.2.2"
