[package]
name = "mace"
version = "0.1.2"
edition = "2024"
authors = ["Niklas Frondorf <niklas@frondorf.eu>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Automated extration of malware configuration, focusing on C2 communication"
repository = "https://github.com/0x6e66/mace"
homepage = "https://github.com/0x6e66/mace"
include = ["src", "Cargo.toml", "README.md"]
keywords = ["malware", "malware-analysis", "malware-extraction", "dga"]
documentation = "https://docs.rs/crate/mace/latest"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
clap = { version = "4.5.28", features = ["derive"] }
exe = "0.5.6"
iced-x86 = "1.21.0"
indicatif = { version = "0.17.11", features = ["rayon"] }
rayon = "1.10.0"
serde = "1.0.217"
serde_derive = "1.0.217"
serde_json = "1.0.138"
sha256 = "1.5.0"
yara-x = "0.14.0"
zip = "2.2.2"
